fixed menu overlapping

--- a/assets/styles/bootstrap/navbar.less
+++ b/assets/styles/bootstrap/navbar.less
@@ -51,8 +51,6 @@
   overflow-x: visible;
   padding-right: @navbar-padding-horizontal;
   padding-left:  @navbar-padding-horizontal;
-  border-top: 1px solid transparent;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
   &:extend(.clearfix all);
   -webkit-overflow-scrolling: touch;
 
@@ -300,10 +298,6 @@
   margin-left: -@navbar-padding-horizontal;
   margin-right: -@navbar-padding-horizontal;
   padding: 10px @navbar-padding-horizontal;
-  border-top: 1px solid transparent;
-  border-bottom: 1px solid transparent;
-  @shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 0 rgba(255,255,255,.1);
-  .box-shadow(@shadow);
 
   // Mixin behavior for optimum display
   .form-inline();
@@ -662,6 +656,11 @@
       &:focus {
         color: @navbar-inverse-link-disabled-color;
       }
+    }
+  }
+  #main-navbar {
+    @media (max-width: @screen-xs-max) {
+      padding-top: 35px;
     }
   }
 }
